Fix newsticker vertical alignment

--- a/css/spacious.less
+++ b/css/spacious.less
@@ -4995,7 +4995,7 @@ li.default-menu {
 	/*height: 2rem;*/
 	height: 1.6rem;
     /*vertical-align: -3px;*/
-    vertical-align: bottom;
+    vertical-align: text-bottom;
 }
 
 #spacious__topbar-social ul,
